code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_40.wast
(assert_invalid
  (module (func $type-block-value-num-vs-void-after-unreachable
    (block (unreachable) (i32.const 1))
  ))
  "type mismatch"
)